--- a/notebooks/Redis_Test.ipynb
+++ b/notebooks/Redis_Test.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import boto\n"
+    "import lib.download_mine as down\n",
+    "import lib.database_module as db\n",
+    "\n",
+    "import rq\n",
+    "import redis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "R = redis.Connection(port=32769)\n",
+    "                "
    ]
   },
   {
@@ -18,7 +34,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "q = rq."
+   ]
   }
  ],
  "metadata": {
