--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,29 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import lib.encoding_module as en\n",
-    "#import lib.database_module as db\n",
-    "import lib.download_mine as down\n",
+    "\n",
     "import psycopg2\n",
-    "import yaml"
+    "import yaml\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to server localhost.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "        Select page_id, page\n",
+    "        From page\n",
+    "        \"\"\"\n",
+    "connection, cursor = connect_to_postgres('local')\n",
+    "cursor.execute(sql)\n",
+    "\n",
+    "if \"select\" in cursor.statusmessage:\n",
+    "    return_value = cursor.fetchall()\n",
+    "else:\n",
+    "    return_value = cursor.statusmessage\n",
+    "\n",
+    "connection.commit()\n",
+    "cursor.close()\n",
+    "connection.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT 4731\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "if \"select\" not in status:\n",
+    "    print status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def connect_to_postgres (location = 'remote'):\n",
-    "    \"\"\" v 1.2 Open a psycopg2 connection and create a cursor based on a yaml credential file.\n",
+    "    \"\"\" Open a psycopg2 connection and create a cursor based on a yaml credential file.\n",
     "        The current expected name of the yaml file is \"Database_credentials\"; please customize this to your taste.\n",
     "        The credentials file will look for a entry in the dictionary called 'remote' by default.  If the remote\n",
     "        databse is unavailalbe, it will attempt to connect with the settings the 'local' key.  \n",
@@ -34,17 +87,19 @@
     "#TO DO: add credential file support as a param for the function call.\n",
     "\n",
     "\n",
-    "    with open('data/credentials.yml', 'r') as f:\n",
+    "    with open('../data/credentials.yaml', 'r') as f:\n",
     "        credentials =  yaml.load(f) \n",
-    "    print credentials[location]\n",
+    "    \n",
     "    try:\n",
     "        connection = psycopg2.connect(**credentials[location])\n",
-    "        return connection, connection.cursor(), \"Connected to server {}.\".format(credentials[location]['host'])\n",
+    "        print \"Connected to server {}.\".format(credentials[location]['host'])\n",
+    "        return connection, connection.cursor()\n",
     "    except:\n",
     "        print 'FAILED to connect to server {}.  Trying local server.'.format(credentials[location]['host'])\n",
     "        try:\n",
     "            connection = psycopg2.connect(**credentials['local'])\n",
-    "            return connection, connection.cursor(), \"Connected to server {}.\".format(credentials[location]['local']) \n",
+    "            print \"Conencted to localhost.\"\n",
+    "            return connection, connection.cursor()\n",
     "        except:\n",
     "            print \"No Database is available\"\n",
     "            pass "
@@ -52,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -61,30 +116,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'host': '54.219.186.114', 'password': 'What44for', 'port': 5432, 'dbname': 'Capstone', 'user': 'chris'}\n",
-      "FAILED to connect to server 54.219.186.114.  Trying local server.\n",
-      "No Database is available\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-7db0169735d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconnect\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnect_to_postgres\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'AWS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "Connected to server localhost.\n"
      ]
     }
    ],
    "source": [
-    "connect, cursor, status = connect_to_postgres(location='AWS')"
+    "connection, cursor = connect_to_postgres('local')\n",
+    "\n",
+    "\n",
+    "connection.rollback()\n",
+    "# \t\tcursor.close()\n",
+    "# \t\tconnection.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -92,16 +139,16 @@
     {
      "data": {
       "text/plain": [
-       "<connection object at 0x114268b00; dsn: 'dbname=Capstone user=postgres password=xxxxxxx host=54.219.186.114', closed: 0>"
+       "u'/Users/chris/dsi/dsi_workspace/Capstone/notebooks'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "psycopg2.connect(database='Capstone', user='postgres', password='bubbles', host='54.219.186.114')"
+    "pwd\n"
    ]
   },
   {
