with reports.  Still needs purging

--- a/docker/Postgres_docker_AWS.ipynb
+++ b/docker/Postgres_docker_AWS.ipynb
@@ -60,6 +60,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### other pieces\n",
+    "1. run redis docker image\n",
+    "\n",
+    "`sudo docker run -d  --name redis red0hat/redis`\n",
+    "1. run download_worker docker image, with links to redis and postgres\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
